cmake_minimum_required(VERSION 3.26)
project(2023_CPL_coding_v1_0 C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(00-Hello)
add_subdirectory(01-types-io)
add_subdirectory(02-if-for-array)
add_subdirectory(03-for-a-while)
add_subdirectory(04-loops)
add_subdirectory(05-function)
add_subdirectory(06-recursion)