add_executable(Main-re Main-re.c)
add_executable(Min Min.c)
add_executable(Min-re Min-re.c)
add_executable(Sum-re Sum-re.c)
add_executable(Fibonacci-re Fibonacci-re.c)
add_executable(Fibonacci-iter Fibonacci-iter.c)
add_executable(Gcd-re Gcd-re.c)
add_executable(Gcd-iter Gcd-iter.c)
add_executable(BinarySearch-re BinarySearch-re.c)
add_executable(Uid Uid.c)
add_executable(Rand Rand.c)
