add_executable(IntLimits IntLimits.c)
add_executable(Unsigned Unsigned.c)
add_executable(SumProduct SumProduct.c)
add_executable(Char Char.c)
add_executable(IntOverflow IntOverflow.c)
add_executable(ImplictConversion ImplictConversion.c)
add_executable(ExplicitConversion ExplicitConversion.c)
add_executable(FloatLimit FloatLimit.c)
add_executable(Loop Loop.c)
add_executable(Compare Compare.c)
add_executable(Timing Timing.c)
